--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-project-2",
   "version": "0.1.0",
   "homepage": "https://bartekcw.github.io/Project-React-2",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
